--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_riverpod: ^2.4.10
   riverpod_annotation: ^2.3.4
   firebase_core: ^2.25.3
+  firebase_crashlytics: ^3.4.13
+  firebase_analytics: ^10.8.4
 
 dev_dependencies:
   flutter_test:
