fix(firebase) fix expiremental web frimework

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -22,3 +22,6 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_IN_DREAMS_34EEB }}'
           channelId: live
           projectId: in-dreams-34eeb
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
+
