--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -19,3 +19,5 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_IN_DREAMS_34EEB }}'
           projectId: in-dreams-34eeb
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
