--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   firebase_core: ^2.25.3
   firebase_crashlytics: ^3.4.13
   firebase_analytics: ^10.8.4
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  decimal: ^2.3.3
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +30,8 @@ dev_dependencies:
   build_runner: ^2.4.8
   custom_lint: ^0.6.0
   riverpod_lint: ^2.3.9
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
